// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PopoverListMembers should match snapshot 1`] = `
<div
  className="channel-members-popver"
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        id="channelMembersTooltip"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--left channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <i
          aria-hidden="true"
          className="icon icon-account-outline channel-header__members"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="a11y__popup member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <MemoizedFormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
        <button
          className="btn btn-link"
          id="editBtn"
          onClick={[Function]}
        >
          <i
            className="icon icon-pencil-outline"
          />
          <MemoizedFormattedMessage
            defaultMessage="Edit"
            id="members_popover.editBtn"
          />
        </button>
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex={-1}
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="online"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="offline"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
        </div>
      </div>
      <div
        className="more-modal__button"
        key="popover-member-more"
      >
        <button
          className="btn btn-link"
          data-testid="membersModal"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Manage Members"
            id="members_popover.manageMembers"
          />
        </button>
      </div>
    </Popover>
  </Overlay>
</div>
`;

exports[`components/PopoverListMembers should match snapshot with archived channel 1`] = `
<div
  className="channel-members-popver"
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        id="channelMembersTooltip"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--left channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <i
          aria-hidden="true"
          className="icon icon-account-outline channel-header__members"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="a11y__popup member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <MemoizedFormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex={-1}
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="online"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="offline"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
        </div>
      </div>
    </Popover>
  </Overlay>
</div>
`;

exports[`components/PopoverListMembers should match snapshot with group-constrained channel 1`] = `
<div
  className="channel-members-popver"
  id="channelMember"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    disabled={false}
    overlay={
      <Tooltip
        id="channelMembersTooltip"
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Members"
          id="channel_header.channelMembers"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <button
      aria-label="members"
      className="member-popover__trigger channel-header__icon channel-header__icon--left channel-header__icon--wide "
      id="member_popover"
      onClick={[Function]}
    >
      <div
        className="d-flex align-items-center"
      >
        <i
          aria-hidden="true"
          className="icon icon-account-outline channel-header__members"
        />
        <span
          className="icon__text"
          id="channelMemberCountText"
        >
          2
        </span>
      </div>
    </button>
  </OverlayTrigger>
  <Overlay
    animation={[Function]}
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
  >
    <Popover
      className="a11y__popup member-list__popover"
      id="member-list-popover"
      placement="right"
      popoverSize="sm"
      popoverStyle="info"
    >
      <div
        className="more-modal__header"
      >
        <MemoizedFormattedMessage
          defaultMessage="Channel Members"
          id="members_popover.title"
        />
        <button
          className="btn btn-link"
          id="editBtn"
          onClick={[Function]}
        >
          <i
            className="icon icon-pencil-outline"
          />
          <MemoizedFormattedMessage
            defaultMessage="Edit"
            id="members_popover.editBtn"
          />
        </button>
        <div
          className="subhead"
        >
          <MemoizedFormattedMessage
            defaultMessage="Members managed by linked groups."
            id="channel_header.groupConstrained"
          />
        </div>
      </div>
      <div
        className="more-modal__body"
      >
        <div
          className="more-modal__list"
          role="presentation"
          tabIndex={-1}
        >
          <Connect(PopoverListMembersItem)
            key="member_id_1"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="online"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_1",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
          <Connect(PopoverListMembersItem)
            key="member_id_2"
            onItemClick={[Function]}
            showMessageIcon={false}
            status="offline"
            user={
              Object {
                "allow_marketing": false,
                "auth_data": "",
                "auth_service": "",
                "bot_description": "",
                "bot_last_icon_update": 0,
                "create_at": 0,
                "delete_at": 0,
                "email": "",
                "email_verified": true,
                "failed_attempts": 0,
                "first_name": "",
                "id": "member_id_2",
                "is_bot": false,
                "last_activity_at": 0,
                "last_name": "",
                "last_password_update": 0,
                "last_picture_update": 0,
                "locale": "",
                "mfa_active": false,
                "mfa_secret": "",
                "nickname": "",
                "notify_props": Object {
                  "channel": "false",
                  "comments": "never",
                  "desktop": "default",
                  "desktop_sound": "false",
                  "email": "false",
                  "first_name": "false",
                  "mark_unread": "mention",
                  "mention_keys": "",
                  "push": "none",
                  "push_status": "offline",
                },
                "password": "",
                "position": "",
                "props": Object {},
                "roles": "",
                "terms_of_service_create_at": 0,
                "terms_of_service_id": "",
                "update_at": 0,
                "username": "some-user",
              }
            }
          />
        </div>
      </div>
      <div
        className="more-modal__button"
        key="popover-member-more"
      >
        <button
          className="btn btn-link"
          data-testid="membersModal"
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Manage Members"
            id="members_popover.manageMembers"
          />
        </button>
      </div>
    </Popover>
  </Overlay>
</div>
`;
